--- a/hotel-services/package.json
+++ b/hotel-services/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js --debug",
+    "release": "node index.js --release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
