--- a/hotel-services/package.json
+++ b/hotel-services/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node app/index.js --debug",
-    "release": "node app/index.js --release",
+    "start": "node index.js --debug",
+    "release": "node index.js --release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
