--- a/hotel-services/config
+++ b/hotel-services/config
@@ -1,6 +1,7 @@
 // config
 db_sql      : mysqldb
-database    : mysql://app_user:strong_password@localhost:3306/hotel_db?pooling=false
+//database    : mysql://app_user:strong_password@localhost:3306/hotel_db?pooling=false
+database.mysql : ${DATABASE_CONNECTION}
 flow        : 1
 flowui      : 1
 flowip      : '*'
