--- a/hotel-services/docker-compose.yml
+++ b/hotel-services/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: appdb
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: apppass
+      MYSQL_DATABASE: hotel_db
+      MYSQL_USER: app_user
+      MYSQL_PASSWORD: strong_password
     ports:
       - "3306:3306"
     volumes:
