--- a/smarter-tasks/.env
+++ b/smarter-tasks/.env
@@ -1,1 +1,1 @@
-VITE_API_ENDPOINT=https://wd301-api.pupilfirst.school
+VITE_API_ENDPOINT=https://scaling-trout-9xq6wg7qjg29v56-8000.app.github.dev/api
